--- a/Complete Web Developer Course/01-HTML/helloworld.html
+++ b/Complete Web Developer Course/01-HTML/helloworld.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webpage Title</title>
 </head>
 <body>
     <h1>Hello World, this is my first web page.</h1>
+    <h2>Header level 2</h2>
+    <p>Some lovely text in paragraph about the website</p>
 </body>
 </html>
