--- a/Complete Web Developer Course/01-HTML/my-webform.html
+++ b/Complete Web Developer Course/01-HTML/my-webform.html
@@ -13,7 +13,7 @@
         <p>Under 18: <input type="radio" name="age" value="u18"></p>
         <p>Over 18: <input type="radio" name="age" value="o18"></p>
         <p>Favourite food: 
-            <select name="" id="">
+            <select name="" id="favfood">
                 <option value="">Pizza</option>
                 <option value="" selected>Ice cream</option>
                 <option value="">Sandwiches</option>
