--- a/Complete Web Developer Course/01-HTML/my-webform.html
+++ b/Complete Web Developer Course/01-HTML/my-webform.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="">
-        <p>Username: <input type="text" placeholder="Enter Username"</p>
+        <p>Username: <input type="text" placeholder="Enter Username"></p>
         <p>Stay logged in: <input type="checkbox" checked></p>
         <p>Under 18: <input type="radio" name="age" value="u18"></p>
         <p>Over 18: <input type="radio" name="age" value="o18"></p>
