--- a/Complete Web Developer Course/01-HTML/my-audiovideo.html
+++ b/Complete Web Developer Course/01-HTML/my-audiovideo.html
@@ -7,6 +7,7 @@
     <title>Audio & Video</title>
 </head>
 <body>
-    
+    <p><video width="320" height="240" src="SampleVideo_1280x720_1mb.mp4" type="video/mp4" controls>Please upgrade your browser</video></p>
+    <p><audio src="SampleAudio_0.4mb.mp3" type="audio/mpeg" controls>Please upgrade your browser</audio></p>
 </body>
 </html>
