Added Earth video to complete web page demo

--- a/Complete Web Developer Course/01-HTML/come-together.html
+++ b/Complete Web Developer Course/01-HTML/come-together.html
@@ -27,5 +27,11 @@
     <li><a href="Other-works.html#Mata-Annapurneshwari">Mata Annapurneshwari</a></li>
     <li><a href="Other-works.html#Krishna">Lord Krishna</a></li></ol>
     <p><a href="#top">Back to top</a></p>
+    <hr>
+    <form action="https://vlakshmicreations.wixsite.com/vmarts">Do you want to contact the artist and want to know more ? <input type="submit" value="Reach out"></form>
+    <hr>
+    <video width="640" height="480" controls>
+        <source src="Earth.mp4" title="Earth" type="video/mp4">
+    </video>
 </body>
 </html>
