--- a/Complete Web Developer Course/01-HTML/my-frames.html
+++ b/Complete Web Developer Course/01-HTML/my-frames.html
@@ -11,5 +11,6 @@
     <iframe src="http://www.wikipedia.com" frameborder="0"></iframe>
     <p><iframe src="my-entities.html" frameborder="1"></iframe></p>
     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/MoO-UsIvFIs" title="YouTube video player" frameborder="2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    <p><iframe width="960" height="815" src="Reference-HTML-Tag-Reference.pdf" frameborder="1"></iframe></p>
 </body>
 </html>
